test/input/invalid/for-await.js
for await (; console.log(42););
